--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -97,7 +97,7 @@
                             <h:outputLabel value="#{bundle.CurrentSize}:"/> 
                             <h:outputLabel value="#{sessionBean.totalfilesSize}"/>
                             <h:outputLabel value="Gb."/>
-                            <p:commandButton icon="ico_refresh" title="#{bundle.Refresh}" 
+                            <p:commandButton icon="ico_refresh-16" title="#{bundle.Refresh}" 
                                             onstart="PF('statusDialog').show()"
                                             oncomplete="PF('statusDialog').hide();"
                                             actionListener="#{sessionBean.setMeterFileSize(null)}" update="charts">
@@ -216,13 +216,10 @@
                                         value="#{bundle.Scheduler}" target="_blank" />
                                 
                                 <p:graphicImage value="/resources/icon/tasks-32.png"/>  
-                                <h:panelGrid columns="2">
-                                    <p:commandLink id="countTasks" value="#{''.concat(bundle.MyTasks).concat(': ').concat(sessionBean.getTasksInfo())}" 
-                                                   actionListener="#{sessionBean.setOpenFormName(DictFrmName.FRM_MY_TASKS)}"
-                                                   oncomplete="document.getElementById('mainFRM:btnOpenForm').click();"> 
-                                    </p:commandLink>
-                                    <p:commandButton icon="ico_refresh-16" title="#{bundle.Refresh}" update="countTasks"/>                                    
-                                </h:panelGrid>
+                                <p:commandLink id="countTasks" value="#{''.concat(bundle.MyTasks).concat(': ').concat(sessionBean.getTasksInfo())}" 
+                                               actionListener="#{sessionBean.setOpenFormName(DictFrmName.FRM_MY_TASKS)}"
+                                               oncomplete="document.getElementById('mainFRM:btnOpenForm').click();"> 
+                                </p:commandLink>
                             </p:panelGrid>
                         </p:panelGrid>
                     </p:panel>
@@ -255,11 +252,8 @@
                         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="without-spaces">                            
                             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="without-spaces" >                                 
                                 <p:graphicImage value="/resources/icon/new_msg-32.png"/>
-                                <h:panelGrid columns="2">
-                                    <p:commandLink id="countMessages" value="#{''.concat(bundle.CountNewMessages).concat(': ').concat(sessionBean.getMessagesInfo())}"
-                                           onclick="document.getElementById('mainFRM:btnMsgInfo').click();" />
-                                    <p:commandButton icon="ico_refresh-16" title="#{bundle.Refresh}" update="countMessages"/>                                      
-                                </h:panelGrid>
+                                <p:commandLink id="countMessages" value="#{''.concat(bundle.CountNewMessages).concat(': ').concat(sessionBean.getMessagesInfo())}"
+                                       onclick="document.getElementById('mainFRM:btnMsgInfo').click();" />
                                     
                                 <p:graphicImage value="/resources/icon/msg-32.png"/>
                                 <p:commandLink  value="#{bundle.AllMessages}" onclick="document.getElementById('mainFRM:btnMessages').click();" />                                
