--- a/escom-bpm-web/src/main/webapp/view/tasks/tabs/execution.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/tabs/execution.xhtml
@@ -20,6 +20,13 @@
                 </ui:repeat>
             </h:panelGroup>                
 
+            <h:panelGrid columns="2">
+                <p:graphicImage value="/resources/icon/control-20.png"/>
+                <p:link rendered="#{taskCardBean.process != null and _bean.editedItem.id != null}"
+                        href="#{''.concat(sessionBean.onGetExplorerURL('/processes/monitor')).concat(taskCardBean.paramUrlProc())}" 
+                        value="#{bundle.OpenProcessInProcessMonitor}" target="_blank" />
+            </h:panelGrid>
+            
             <p:outputLabel value="#{bundle.ReportExe}:" indicateRequired="true"/>                
             <p:textEditor value="#{taskCardBean.editedItem.comment}" 
                           readonly="#{taskCardBean.typeEdit eq DictEditMode.VIEW_MODE
