--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -65,6 +65,7 @@
 .ico-task-16{background-image: url('../resources/icon/task-16.png') !important;}
 .ico_timer16{background-image: url('../resources/icon/timer-16.png') !important;}
 .ico_condition-16{background-image: url('../resources/icon/condition-16.png') !important;}
+.ico_control-16{background-image: url('../resources/icon/control-16.png') !important;}
 .ico_state-16{background-image: url('../resources/icon/state-16.png') !important;}
 .ico_procedure-16{background-image: url('../resources/icon/procedure-16.png') !important;}
 .ico_start-16{background-image: url('../resources/icon/start-16.png') !important;}
