--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -21,8 +21,9 @@
         <h:outputScript library="js" name="confirm-close-window.js"/>
         <p:importConstants type="com.maxfill.dictionary.DictFilters" var="DictFilters" />
         <p:importConstants type="com.maxfill.dictionary.DictFrmName" var="DictFrmName" />        
-
-        <h:form id="mainFRM">            
+        <h:form id="mainFRM">
+            <p:poll interval="90" update="mainFRM:countMessages mainFRM:countTasks" autoStart="true" />
+            
             <p:notificationBar id="notifBar" position="top" effect="slide" styleClass="notifBar" widgetVar="notifBar" >
                 <p:commandButton title="#{bundle.Close}" style="position: absolute; right: 30px; top: 5px; border: 0px; width: 30px;"
                                  icon="ui-icon-circle-close"
